--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
+    "vue-material": "^1.0.0-beta-15",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.4.9"
+    "vue-router": "^3.4.9",
+    "vuelidate": "^0.7.6"
   },
   "browserslist": [
     "> 1%",
