--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "@vue/cli": "^4.5.9",
     "vue": "^2.5.11",
     "vue-material": "^1.0.0-beta-15",
     "vue-resource": "^1.5.1",
