--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "vue-material": "^1.0.0-beta-15",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.4.9",
-    "vuelidate": "^0.7.6"
+    "vuelidate": "^0.7.6",
+    "cross-env": "^5.2.1",
+    "webpack-dev-server": "^2.9.1"
   },
   "browserslist": [
     "> 1%",
@@ -27,7 +29,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.0.5",
+    "cross-env": "^5.2.1",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
     "vue-loader": "^13.0.5",
