--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-router": "^3.4.9",
     "vuelidate": "^0.7.6",
     "cross-env": "^5.2.1",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": "^2.9.1",
+    "webpack": "^3.6.0"
   },
   "browserslist": [
     "> 1%",
