--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
   },
   "dependencies": {
     "@vue/cli": "^4.5.9",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.2.1",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
-    "jszip": "^3.7.1",
     "vue": "^2.5.11",
     "vue-loader": "^13.0.5",
     "vue-material": "^1.0.0-beta-15",
@@ -35,9 +32,12 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.2.1",
     "css-loader": "^0.28.7",
