--- a/app.yaml
+++ b/app.yaml
@@ -3,9 +3,10 @@ service: adinfo-interface-estable
 
 handlers:
 - url: /
-  static_files: www/index.html
-  upload: www/index.html
-
+  static_files: index.html
+  require_matching_file: false
+  upload: index.html
 - url: /(.*)
-  static_files: www/\1
-  upload: www/(.*)
+  static_files: \1
+  require_matching_file: false
+  upload: (.*)
