--- a/app.yaml
+++ b/app.yaml
@@ -1,12 +1,26 @@
 runtime: nodejs16
 service: adinfo-interface-estable
-
 handlers:
+- url: /(.+\.js)
+  static_files: \1
+  upload: (.+\.js)
+  secure: always
+  redirect_http_response_code: 301
+
+- url: /(.+\.jpg)
+  static_files: \1
+  upload: (.+\.jpg)
+  secure: always
+  redirect_http_response_code: 301
+
+- url: /(.+)
+  static_files: index.html
+  upload: index.html
+  secure: always
+  redirect_http_response_code: 301
+
 - url: /
   static_files: index.html
-  require_matching_file: false
   upload: index.html
-- url: /(.*)
-  static_files: \1
-  require_matching_file: false
-  upload: (.*)
+  secure: always
+  redirect_http_response_code: 301
